# smartassist

./: Cargo.toml  README.md
.cargo/: config.toml
crates/smartassist-agent/: Cargo.toml
crates/smartassist-agent/src/: approval.rs  error.rs  lib.rs  runtime.rs  session.rs
crates/smartassist-agent/src/providers/: anthropic.rs  deepseek.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  qwen.rs  zhipu.rs
crates/smartassist-agent/src/tools/: archive.rs  ask.rs  automation.rs  browser.rs  canvas.rs  channel_actions.rs  checksum.rs  compare.rs  context.rs  diagnostic.rs  diff.rs  encoding.rs  env.rs  fileops.rs  filesystem.rs  git.rs  http.rs  json.rs  lsp.rs  math.rs  media.rs  memory.rs  messaging.rs  mod.rs  network.rs  notebook.rs  plan.rs  process.rs  skill.rs  string.rs  system.rs  tasks.rs  template.rs  time.rs  util.rs  validate.rs  web.rs
crates/smartassist-channels/: Cargo.toml
crates/smartassist-channels/src/: attachment.rs  delivery.rs  discord.rs  error.rs  imessage.rs  lib.rs  line.rs  manager.rs  registry.rs  routing.rs  signal.rs  slack.rs  telegram.rs  traits.rs  web.rs  whatsapp.rs
crates/smartassist-cli/: Cargo.toml
crates/smartassist-cli/src/: lib.rs  main.rs  onboard.rs  render.rs  repl.rs  wizard.rs
crates/smartassist-cli/src/commands/: agent.rs  channels.rs  config.rs  doctor.rs  gateway.rs  mod.rs  plugins.rs  secrets.rs
crates/smartassist-core/: Cargo.toml
crates/smartassist-core/src/: env.rs  error.rs  id.rs  lib.rs  paths.rs  secret.rs
crates/smartassist-core/src/config/: loader.rs  mod.rs  schema.rs
crates/smartassist-core/src/context/: compactor.rs  mod.rs  monitor.rs
crates/smartassist-core/src/safety/: leak_detector.rs  mod.rs  policy.rs  sanitizer.rs  validator.rs
crates/smartassist-core/src/types/: agent.rs  audit.rs  auth.rs  channel.rs  identifiers.rs  message.rs  mod.rs  model.rs  session.rs  tool.rs
crates/smartassist-gateway/: Cargo.toml
crates/smartassist-gateway/src/: error.rs  lib.rs  methods.rs  rpc.rs  server.rs  session.rs
crates/smartassist-gateway/src/handlers/: agent.rs  chat.rs  config.rs  cron.rs  device.rs  exec.rs  health.rs  mod.rs  models.rs  nodes.rs  send.rs  sessions.rs  skills.rs  system.rs  wizard.rs
crates/smartassist-memory/: Cargo.toml
crates/smartassist-memory/src/: embeddings.rs  error.rs  lib.rs  search.rs  store.rs
crates/smartassist-plugin-sdk/: Cargo.toml
crates/smartassist-plugin-sdk/src/: channel.rs  error.rs  hooks.rs  lib.rs  provider.rs  tool.rs
crates/smartassist-providers/: Cargo.toml
crates/smartassist-providers/src/: anthropic.rs  error.rs  google.rs  lib.rs  openai.rs  types.rs
crates/smartassist-sandbox/: Cargo.toml
crates/smartassist-sandbox/src/: error.rs  executor.rs  lib.rs  limits.rs  profile.rs  pty.rs
crates/smartassist-sandbox/src/linux/: capabilities.rs  landlock.rs  mod.rs  namespace.rs  seccomp.rs
crates/smartassist-sandbox/src/macos/: mod.rs
crates/smartassist-secrets/: Cargo.toml
crates/smartassist-secrets/src/: crypto.rs  error.rs  keychain.rs  lib.rs  store.rs  types.rs
examples/hello-plugin/: Cargo.toml
examples/hello-plugin/src/: lib.rs
rust-spec/: 00-overview.md
rust-spec/channels/: 00-channel-traits.md  01-telegram.md  02-discord.md  03-slack.md  04-signal.md  05-imessage.md  06-whatsapp.md  07-line.md  08-web.md
rust-spec/gateway/: 00-gateway-overview.md
rust-spec/plugins/: 00-plugin-sdk.md
rust-spec/providers/: 00-providers-overview.md
rust-spec/tools/: 00-tools-overview.md
tests/integration/: Cargo.toml  lib.rs
tests/integration/tests/: cli_routing.rs  config_roundtrip.rs
