[package]
name = "smartassist-channels"
version = "0.1.0"
edition = "2021"
description = "Messaging channel abstractions for SmartAssist"
license = "MIT"
readme = "README.md"

[dependencies]
smartassist-core = { path = "../smartassist-core" }

# Async runtime
tokio = { version = "1.35", features = ["full", "sync"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for webhook-based channels)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }

# File handling
bytes = "1.5"
mime = "0.3"
mime_guess = "2.0"

# URL handling
url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Platform directories
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = []
telegram = ["dep:teloxide"]
discord = ["dep:serenity"]
slack = ["dep:slack-morphism"]
web = ["dep:tokio-tungstenite"]
signal = []
imessage = ["dep:rusqlite"]
whatsapp = []
line = ["dep:hmac", "dep:sha2", "dep:base64"]

[dependencies.teloxide]
version = "0.12"
optional = true
default-features = false
features = ["macros", "rustls"]

[dependencies.serenity]
version = "0.12"
optional = true
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]

[dependencies.slack-morphism]
version = "2.2"
optional = true
default-features = false
features = ["hyper"]

# LINE channel dependencies
[dependencies.hmac]
version = "0.12"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

# Web channel dependencies
[dependencies.tokio-tungstenite]
version = "0.21"
optional = true

# iMessage channel dependencies
[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]
