[package]
name = "smartassist-gateway"
version = "0.1.0"
edition = "2021"
description = "WebSocket gateway server for SmartAssist"
license = "MIT"

[dependencies]
smartassist-core = { path = "../smartassist-core" }
smartassist-agent = { path = "../smartassist-agent" }
smartassist-channels = { path = "../smartassist-channels" }
smartassist-providers = { path = "../smartassist-providers", features = ["anthropic", "openai", "google"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "sync"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# WebSocket
tokio-tungstenite = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cron scheduling
cron = "0.12"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Random
rand = "0.8"

# System info
hostname = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
