[package]
name = "smartassist-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "Plugin SDK for extending SmartAssist with custom channels, tools, and providers"
license = "MIT"
readme = "README.md"

[dependencies]
smartassist-core = { path = "../smartassist-core" }
smartassist-channels = { path = "../smartassist-channels" }

# Async runtime
tokio = { version = "1.35", features = ["sync"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Version handling
semver = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform directories
dirs = "5.0"

# Dynamic library loading
libloading = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
