[package]
name = "smartassist-providers"
version = "0.1.0"
edition = "2021"
description = "Model provider implementations for SmartAssist"
license = "MIT"

[dependencies]
smartassist-core = { path = "../smartassist-core" }

# Async runtime
tokio = { version = "1.35", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
base64 = "0.21"
secrecy = { version = "0.8", features = ["serde"] }

# SSE parsing for streaming
eventsource-stream = "0.2"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
mockito = "1.2"
wiremock = "0.5"

[features]
default = []
anthropic = []
openai = []
google = []
all = ["anthropic", "openai", "google"]
