[package]
name = "smartassist-sandbox"
version = "0.1.0"
edition = "2021"
description = "Secure sandbox execution for SmartAssist agents"
license = "MIT"
readme = "README.md"

[dependencies]
smartassist-core = { path = "../smartassist-core" }

# Async runtime
tokio = { version = "1.35", features = ["full", "process"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PTY handling
portable-pty = "0.8"

# Linux sandboxing (optional, Linux-only)
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["process", "signal", "user", "mount", "sched", "resource"] }
landlock = "0.3"
seccompiler = "0.4"
caps = "0.5"

# macOS sandboxing (optional, macOS-only)
[target.'cfg(target_os = "macos")'.dependencies]
# macOS uses sandbox-exec which we call via Command

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []
linux-sandbox = []
macos-sandbox = []
